# sistema-financeiro

./: .gitignore  DEPLOY.md  INSTALAR-PRIMEIRA-VEZ.txt  LOCAL_DB_BACKUP.md  Procfile  README.md  build.sh  iniciar-backend.bat  render.yaml  start-backend.bat  start-frontend.bat  start-tudo.bat  start-tudo.ps1  verificar-ambiente.bat
backend/: .env.example  build-frontend.sh  build.sh  create_enums.sql  create_enums_fixed.sql  create_enums_step_by_step.sql  financas.db  fix_database.py  fix_enum.py  fix_table_final.sql  pyproject.toml  recreate_transacoes_zero.sql  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/auth/: security.py
backend/app/crud/: contas.py  transacoes.py  usuarios.py
backend/app/models/: __init__.py
backend/app/routers/: auth.py  contas.py  dashboard.py  importacao.py  mercado_pago.py  transacoes.py
backend/app/schemas/: __init__.py
backend/app/services/: importacao.py  mercado_pago.py
backend/frontend/: package-lock.json  vite.config.ts
backend/frontend/src/components/: Layout.tsx
backend/frontend/src/contexts/: AuthContext.tsx
backend/frontend/src/pages/: MercadoPago.tsx  NovaTransacao.tsx  Register.tsx
backend/frontend/src/services/: api.ts
backend/frontend/src/types/: index.ts
frontend/: Dockerfile  package.json
frontend/src/: App.tsx  index.css
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Contas.tsx  Dashboard.tsx  Importar.tsx  Login.tsx  NovaTransacao.tsx  Register.tsx  Transacoes.tsx
frontend/src/services/: auth.ts
