[tool.poetry]
name = "sistema-financeiro-backend"
version = "1.0.0"
description = "Backend do sistema de finanças pessoais"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.13.1"
fastapi = "0.104.1"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-multipart = "0.0.6"
uvicorn = {extras = ["standard"], version = "0.24.0"}
gunicorn = "21.2.0"
sqlalchemy = "2.0.23"
pydantic = "2.4.2"
pydantic-settings = "2.1.0"
python-dotenv = "1.0.0"
psycopg2-binary = "2.9.9"
httpx = "0.25.2"
pytest = "7.4.4"
pytest-asyncio = "0.23.3"
openpyxl = "3.1.2"
email-validator = "2.1.0"
pdfplumber = "0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
